--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
       </div>
     </footer>
 
-    <script src="/app/js/script.js"></script>
+        <script src="./app/js/script.js"></script>
+
   </body>
 </html>
